// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`todo-list rendering should do deep rendering 1`] = `
<todo-list
  class="hydrated"
>
  <!---->
  <div>
    <input
      class="new-todo"
      placeholder="What needs to be done?"
    />
    <section
      class="main"
    >
      <ul
        class="todo-list"
      >
        <todo-item
          class="hydrated"
        >
          <!---->
          <li>
            <div
              class="view"
            >
              <input
                class="toggle"
                type="checkbox"
              />
              <label>
                Item 1
              </label>
              <button
                class="destroy"
              />
            </div>
          </li>
        </todo-item>
        <todo-item
          class="hydrated"
        >
          <!---->
          <li>
            <div
              class="view"
            >
              <input
                class="toggle"
                type="checkbox"
              />
              <label>
                Item 2
              </label>
              <button
                class="destroy"
              />
            </div>
          </li>
        </todo-item>
        <todo-item
          class="hydrated"
        >
          <!---->
          <li>
            <div
              class="view"
            >
              <input
                class="toggle"
                type="checkbox"
              />
              <label>
                Item 3
              </label>
              <button
                class="destroy"
              />
            </div>
          </li>
        </todo-item>
      </ul>
    </section>
    <footer
      class="footer"
    >
      <span
        class="todo-count"
      >
        <strong>
           2 Left
        </strong>
         
      </span>
    </footer>
  </div>
</todo-list>
`;

exports[`todo-list rendering should do shallow rendering 1`] = `
<todo-list
  class="hydrated"
>
  <!---->
  <div>
    <input
      class="new-todo"
      placeholder="What needs to be done?"
    />
    <section
      class="main"
    >
      <ul
        class="todo-list"
      >
        <todo-item
          done="false"
          name="Item 1"
        />
        <todo-item
          done="false"
          name="Item 2"
        />
        <todo-item
          done="true"
          name="Item 3"
        />
      </ul>
    </section>
    <footer
      class="footer"
    >
      <span
        class="todo-count"
      >
        <strong>
           2 Left
        </strong>
         
      </span>
    </footer>
  </div>
</todo-list>
`;
